--- a/src/components/atoms/Pill/Pill.module.scss
+++ b/src/components/atoms/Pill/Pill.module.scss
@@ -18,50 +18,50 @@
 
   // Variant styles
   &.variant-filled {
-    background-color: var(--color-surface-secondary);
-    border: var(--border-width-thin) solid var(--color-surface-secondary);
-    color: var(--color-text-primary);
+    background-color: var(--color-primary);
+    border: var(--border-width-thin) solid var(--color-primary);
+    color: var(--color-surface);
 
     &:hover:not(.disabled) {
-      background-color: var(--color-surface-tertiary);
-      border-color: var(--color-surface-tertiary);
+      background-color: var(--color-primary-hover);
+      border-color: var(--color-primary-hover);
     }
 
     &:active:not(.disabled) {
-      background-color: var(--color-surface-tertiary);
-      border-color: var(--color-surface-tertiary);
+      background-color: var(--color-primary-dark);
+      border-color: var(--color-primary-dark);
     }
   }
 
   &.variant-light {
-    background-color: var(--color-surface-secondary);
-    border: var(--border-width-thin) solid var(--color-border-secondary);
-    color: var(--color-text-primary);
+    background-color: var(--color-blue-0);
+    border: var(--border-width-thin) solid var(--color-blue-2);
+    color: var(--color-blue-8);
 
     &:hover:not(.disabled) {
-      background-color: var(--color-surface-tertiary);
-      border-color: var(--color-border-primary);
+      background-color: var(--color-blue-1);
+      border-color: var(--color-blue-3);
     }
 
     &:active:not(.disabled) {
-      background-color: var(--color-surface-tertiary);
-      border-color: var(--color-border-primary);
+      background-color: var(--color-blue-2);
+      border-color: var(--color-blue-4);
     }
   }
 
   &.variant-outline {
     background-color: transparent;
-    color: var(--color-text-primary);
-    border: var(--border-width-thin) solid var(--color-border-secondary);
+    color: var(--color-primary);
+    border: var(--border-width-thin) solid var(--color-primary);
 
     &:hover:not(.disabled) {
-      background-color: var(--color-surface-secondary);
-      border-color: var(--color-border-primary);
+      background-color: var(--color-primary);
+      color: var(--color-surface);
     }
 
     &:active:not(.disabled) {
-      background-color: var(--color-surface-tertiary);
-      border-color: var(--color-border-primary);
+      background-color: var(--color-primary-hover);
+      border-color: var(--color-primary-hover);
     }
   }
 
@@ -94,6 +94,89 @@
     &:active:not(.disabled) {
       background-color: var(--color-surface-tertiary);
       border-color: var(--color-border-primary);
+    }
+  }
+
+  // Semantic color variants (similar to Alert)
+  &.variant-info {
+    background-color: var(--color-blue-0);
+    color: var(--color-blue-9);
+    border: var(--border-width-thin) solid var(--color-blue-3);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-blue-1);
+      border-color: var(--color-blue-4);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-blue-2);
+      border-color: var(--color-blue-5);
+    }
+  }
+
+  &.variant-success {
+    background-color: var(--color-green-0);
+    color: var(--color-green-9);
+    border: var(--border-width-thin) solid var(--color-green-3);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-green-1);
+      border-color: var(--color-green-4);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-green-2);
+      border-color: var(--color-green-5);
+    }
+  }
+
+  &.variant-warning {
+    background-color: var(--color-yellow-0);
+    color: var(--color-yellow-9);
+    border: var(--border-width-thin) solid var(--color-yellow-3);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-yellow-1);
+      border-color: var(--color-yellow-4);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-yellow-2);
+      border-color: var(--color-yellow-5);
+    }
+  }
+
+  &.variant-error {
+    background-color: var(--color-red-0);
+    color: var(--color-red-9);
+    border: var(--border-width-thin) solid var(--color-red-3);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-red-1);
+      border-color: var(--color-red-4);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-red-2);
+      border-color: var(--color-red-5);
+    }
+  }
+
+  &.variant-disabled {
+    color: var(--color-text-muted);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-secondary);
+    cursor: not-allowed;
+    opacity: var(--opacity-50);
+  }
+
+  &.variant-muted {
+    color: var(--color-text-secondary);
+    background-color: var(--color-surface-secondary);
+    border-color: var(--color-border-secondary);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-surface-tertiary);
     }
   }
 
@@ -148,7 +231,8 @@
 
 // Content styling
 .content {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -166,7 +250,7 @@
   padding: 0;
   margin-left: var(--spacing-xs);
   cursor: pointer;
-  color: var(--color-gray-5);
+  color: inherit;
   border-radius: var(--radius-sm);
   transition: none;
   line-height: 1;
@@ -216,21 +300,12 @@
     margin: 0;
   }
 
-  &:hover:not(:disabled) {
-    color: var(--color-gray-7);
-    background-color: var(--color-gray-2);
-    transition: none;
-  }
-
-  &:active:not(:disabled) {
-    background-color: var(--color-gray-3);
-    transition: none;
-  }
-
   &:focus {
-    outline: var(--border-width-normal) solid var(--color-blue-6);
-    outline-offset: var(--border-width-normal);
-    border-radius: var(--radius-sm);
+    outline: none;
+  }
+
+  &:focus-visible {
+    outline: none;
   }
 
   &:disabled {
@@ -261,5 +336,72 @@
 
   &.size-xl {
     padding-right: var(--spacing-lg);
+  }
+}
+
+// Dark mode support
+[data-theme="dark"] {
+  .variant-info {
+    background-color: var(--color-blue-9);
+    color: var(--color-blue-0);
+    border-color: var(--color-blue-7);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-blue-8);
+      border-color: var(--color-blue-6);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-blue-7);
+      border-color: var(--color-blue-5);
+    }
+  }
+
+  .variant-success {
+    background-color: var(--color-green-9);
+    color: var(--color-green-0);
+    border-color: var(--color-green-7);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-green-8);
+      border-color: var(--color-green-6);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-green-7);
+      border-color: var(--color-green-5);
+    }
+  }
+
+  .variant-warning {
+    background-color: var(--color-yellow-9);
+    color: var(--color-yellow-0);
+    border-color: var(--color-yellow-7);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-yellow-8);
+      border-color: var(--color-yellow-6);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-yellow-7);
+      border-color: var(--color-yellow-5);
+    }
+  }
+
+  .variant-error {
+    background-color: var(--color-red-9);
+    color: var(--color-red-0);
+    border-color: var(--color-red-7);
+
+    &:hover:not(.disabled) {
+      background-color: var(--color-red-8);
+      border-color: var(--color-red-6);
+    }
+
+    &:active:not(.disabled) {
+      background-color: var(--color-red-7);
+      border-color: var(--color-red-5);
+    }
   }
 }
