--- a/src/components/atoms/Textarea/Textarea.module.scss
+++ b/src/components/atoms/Textarea/Textarea.module.scss
@@ -86,6 +86,16 @@
     border-color: var(--color-border-secondary);
     color: var(--color-text-disabled);
   }
+
+  // Error styles
+  &.error {
+    border-color: var(--color-error);
+
+    &:focus {
+      border-color: var(--color-error);
+      box-shadow: 0 0 0 var(--border-width-normal) var(--color-error);
+    }
+  }
 }
 
 .noResize {
@@ -105,6 +115,13 @@
   margin: 0;
 }
 
+.error {
+  font-size: var(--font-size-xs);
+  color: var(--color-error) !important;
+  line-height: var(--line-height-xs);
+  margin: 0;
+}
+
 // Disabled state
 .root.disabled {
   opacity: var(--opacity-75);
@@ -112,5 +129,12 @@
 
   .label {
     cursor: not-allowed;
+  }
+}
+
+// Error state
+.root.error {
+  .label {
+    color: var(--color-error) !important;
   }
 }
